@@ -987,4 +987,6 @@ void gaim_prefs_update_old() {
 	gaim_prefs_remove("/core/conversations/away_back_on_send");
 	gaim_prefs_remove("/core/conversations/send_urls_as_links");
 	gaim_prefs_remove("/core/conversations/im/show_login");
+	gaim_prefs_remove("/core/conversations/chat/show_join");
+	gaim_prefs_remove("/core/conversations/chat/show_leave");
 }
